# CPPTechniques

./: .gitignore  CMakeLists.txt  PomiFructifefri  PomiFructiferi.cpp  Probe.cpp  README.md  main  main.cpp
Const/: CMakeLists.txt  Const.cpp
Constexpr/: CMakeLists.txt  Constexpr.cpp
DangerousCStyleCode/: CMakeLists.txt  main.cpp
GoodOOPPractices/: CMakeLists.txt  GoodOOPPractices.cpp
Lambdas/: CMakeLists.txt  Lambdas.cpp
MATH/: pow_custom.cpp  pow_custom.hpp
MacrosProblems /: CMakeLists.txt  MacrosProblems.cpp
Test/: Tests.cpp
